Actually fix the rotated ellipsis on mobile.

--- a/editor/components/block-toolbar/style.scss
+++ b/editor/components/block-toolbar/style.scss
@@ -41,7 +41,7 @@
 		align-items: stretch;
 	}
 
-	.dashicon {
+	.editor-block-toolbar__mobile-toggle .dashicon {
 		transform: rotate( 90deg );
 	}
 }
